@@ -25,6 +25,7 @@ import org.apache.lucene.index.IndexableField;
 import org.apache.lucene.queries.function.ValueSource;
 import org.apache.lucene.queries.function.valuesource.IntFieldSource;
 import org.apache.lucene.queries.function.valuesource.MultiValuedIntFieldSource;
+import org.apache.lucene.search.MatchNoDocsQuery;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.search.SortField;
 import org.apache.lucene.search.SortedNumericSelector;
@@ -66,6 +67,7 @@ public class IntPointField extends PointField implements IntValueFieldType {
     } else {
       actualMin = parseIntFromUser(field.getName(), min);
       if (!minInclusive) {
+        if (actualMin == Integer.MAX_VALUE) return new MatchNoDocsQuery();
         actualMin++;
       }
     }
@@ -74,6 +76,7 @@ public class IntPointField extends PointField implements IntValueFieldType {
     } else {
       actualMax = parseIntFromUser(field.getName(), max);
       if (!maxInclusive) {
+        if (actualMax == Integer.MIN_VALUE) return new MatchNoDocsQuery();
         actualMax--;
       }
     }
